Removed some unused code and started to implement variables for styling

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -14,7 +14,7 @@
             max-width: 600px;
             display: flex;
             flex-direction: column;
-            @media only screen and (min-width: 500px) {
+            @media only screen and (min-width: $mobileSmallWidth) {
                 margin-top: 60px;
             }
 
@@ -79,7 +79,7 @@
 
         .form__group:last-of-type {
             margin-top: 50px;
-            @media only screen and (max-width: 500px) {
+            @media only screen and (max-width: $mobileSmallWidth) {
                 margin-bottom: 60px;
             }
         }
@@ -232,7 +232,7 @@
                 color: #999;
                 margin-top: 1px;
 
-                @media only screen and (max-width: 500px) {
+                @media only screen and (max-width: $mobileSmallWidth) {
                     display: none;
                 }
             }
@@ -248,203 +248,9 @@
                     color: #222;
                 }
             }
-            @media only screen and (max-width: 500px) {
+            @media only screen and (max-width: $mobileSmallWidth) {
                 flex-direction: column;
             }
         }
     }
 }
-
-// #footer {
-//     &.container__wrapper {
-//         padding: 50px 20px;
-//         background: #f8f8f8;
-//         background: -webkit-linear-gradient(to right, #f8f8f8, #fbfbfb);
-//         background: linear-gradient(to right, #f8f8f8, #fbfbfb);
-//         display: flex;
-//         -ms-flex-align: center;
-//         justify-content: center;
-//         min-height: calc(100vh - 80px);
-//         position: relative;
-
-//         .container {
-//             max-width: 600px;
-//             display: flex;
-//             flex-direction: column;
-//             @media only screen and (min-width: 500px) {
-//                 margin-top: 60px;
-//             }
-
-//             .row {
-//                 display: flex;
-//                 flex-direction: column;
-//                 width: 100%;
-//                 justify-content: center;
-//                 flex: 1 0 auto;
-
-//                 .contact__form__wrapper {
-//                     margin-top: 30px;
-//                 }
-//             }
-//         }
-//     }
-
-//     .contact__form__wrapper {
-//         .form__group {
-//             margin-bottom: 1rem;
-//         }
-
-//         .input__group {
-//             position: relative;
-//             display: -ms-flexbox;
-//             display: flex;
-//             -ms-flex-wrap: wrap;
-//             flex-wrap: wrap;
-//             -ms-flex-align: stretch;
-//             align-items: stretch;
-//             width: 100%;
-//             margin-bottom: 20px;
-//         }
-
-//         .form__group:last-of-type {
-//             margin-top: 50px;
-//             @media only screen and (max-width: 500px) {
-//                 margin-bottom: 60px;
-//             }
-//         }
-
-//         .form__input {
-//             display: block;
-//             width: 100%;
-//             height: calc(1.5em + 0.75rem + 2px);
-//             padding: 0.375rem 0;
-//             font-size: 13px;
-//             font-weight: 400;
-//             line-height: 1;
-//             letter-spacing: 2px;
-//             color: #111;
-//             background-color: transparent;
-//             background-clip: padding-box;
-//             border: 0;
-//             border-bottom: 1px solid #444;
-//             outline: none;
-//             transition: border-color 0.15s ease-in-out;
-//         }
-
-//         .form__input:focus {
-//             border-color: $themeColor;
-//         }
-
-//         select.form__input[size],
-//         select.form__input[multiple] {
-//             height: auto;
-//         }
-
-//         textarea.form__input {
-//             height: auto;
-//         }
-
-//         input:-webkit-autofill,
-//         input:-webkit-autofill:hover,
-//         input:-webkit-autofill:focus,
-//         input:-webkit-autofill:active {
-//             transition: background-color 5000s ease-in-out 0s;
-//             -webkit-text-fill-color: #111 !important;
-//         }
-
-//         @media (prefers-reduced-motion: reduce) {
-//             .form__btn__primary {
-//                 transition: none;
-//             }
-//         }
-
-//         .form__btn__primary {
-//             color: #da933f;
-//             background-color: transparent;
-//             border: 0;
-//             border-bottom: 1px solid #da933f;
-//             font-size: 13px;
-//             padding: 10px 1px;
-//             letter-spacing: 2px;
-//             -webkit-user-select: none;
-//             -moz-user-select: none;
-//             -ms-user-select: none;
-//             user-select: none;
-//             transition: color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-//         }
-
-//         .form__btn__primary:hover {
-//             cursor: pointer;
-//             color: $lightThemeColor;
-//             border-color: $lightThemeColor;
-//         }
-
-//         .form__btn__primary:focus,
-//         .form__btn__primary.focus {
-//             outline: none;
-//         }
-//     }
-
-//     .social__wrapper {
-//         flex-shrink: 0;
-//         .social__links {
-//             max-width: 175px;
-//             display: flex;
-//             justify-content: space-evenly;
-//             .social__link {
-//                 .social__link__icon {
-//                     fill: #000;
-//                     border: 1px solid;
-//                     background-color: #f5e0c6;
-//                     border-color: #f5e0c6;
-//                     height: 35px;
-//                     width: 35px;
-//                     padding: 10px;
-//                     transition: fill 0.15s ease-in-out,
-//                         border-color 0.15s ease-in-out,
-//                         background-color 0.15s ease-in-out,
-//                         fill 0.15s ease-in-out;
-
-//                     &:hover {
-//                         fill: #000;
-//                         background-color: #fbe4c9;
-//                         border-color: #fbe4c9;
-//                     }
-//                 }
-//             }
-//         }
-
-//         .personal__info {
-//             margin-top: 20px;
-
-//             display: flex;
-//             justify-content: center;
-
-//             .separator {
-//                 margin: 0 10px;
-//                 font-size: 16px;
-//                 color: #999;
-//                 margin-top: 1px;
-
-//                 @media only screen and (max-width: 500px) {
-//                     display: none;
-//                 }
-//             }
-//             p {
-//                 color: #888;
-//             }
-//             a {
-//                 font-size: 13px;
-//                 line-height: 26px;
-//                 color: #666;
-//                 letter-spacing: 1px;
-//                 &:hover {
-//                     color: #222;
-//                 }
-//             }
-//             @media only screen and (max-width: 500px) {
-//                 flex-direction: column;
-//             }
-//         }
-//     }
-// }
