--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -12,7 +12,7 @@
         min-height: calc(100vh - 80px);
         position: relative;
 
-        @media only screen and (min-width: 768px) {
+        @media only screen and (min-width: $mobileWidth) {
             padding: 50px 20px 100px;
         }
 
@@ -46,7 +46,7 @@
                             overflow: hidden;
                             margin-left: -20px;
 
-                            @media only screen and (max-width: 768px) {
+                            @media only screen and (max-width: $mobileWidth) {
                                 margin-left: 0;
                             }
                         }
@@ -86,7 +86,7 @@
                         }
                     }
 
-                    @media only screen and (max-width: 768px) {
+                    @media only screen and (max-width: $mobileWidth) {
                         margin: 0 0 70px 0;
                     }
 
@@ -119,7 +119,7 @@
                         }
                     }
 
-                    @media only screen and (max-width: 768px) {
+                    @media only screen and (max-width: $mobileWidth) {
                         h3,
                         p {
                             text-align: left !important;
