--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -104,9 +104,11 @@
 
             &:-internal-autofill-selected {
                 font-family: 'Lato', sans-serif;
-                background-color: transparent !important;
-                box-shadow: 0 0 0 50px white inset;
-                -webkit-box-shadow: 0 0 0 50px white inset;
+                background-color: #fbfbfb !important;
+                box-shadow: 0 0 0 50px #fbfafb inset;
+                -webkit-box-shadow: 0 0 0 50px #fbfafb inset;
+                font-size: 0.96rem;
+                -webkit-text-stroke-width: 0.5px;
             }
             &:-webkit-autofill::first-line {
                 font-family: 'Lato', sans-serif;
@@ -176,18 +178,18 @@
             -moz-user-select: none;
             -ms-user-select: none;
             user-select: none;
-            transition: color 0.15s ease-in-out, border-color 0.15s ease-in-out;
-        }
+            transition: all 0.15s ease-in-out;
 
-        .form__btn__primary:hover {
-            cursor: pointer;
-            color: $lightThemeColor;
-            border-color: $lightThemeColor;
-        }
+            &:hover {
+                cursor: pointer;
+                color: $semiLightThemeColor;
+                border-color: $semiLightThemeColor;
+            }
 
-        .form__btn__primary:focus,
-        .form__btn__primary.focus {
-            outline: none;
+            &:focus,
+            &.focus {
+                outline: none;
+            }
         }
     }
 
@@ -200,21 +202,17 @@
             .social__link {
                 .social__link__icon {
                     fill: #000;
-                    border: 1px solid;
                     background-color: #f5e0c6;
-                    border-color: #f5e0c6;
+                    border: 0;
                     height: 35px;
                     width: 35px;
                     padding: 10px;
-                    transition: fill 0.15s ease-in-out,
-                        border-color 0.15s ease-in-out,
-                        background-color 0.15s ease-in-out,
-                        fill 0.15s ease-in-out;
+                    transition: all 0.2s;
 
                     &:hover {
                         fill: #000;
                         background-color: #fbe4c9;
-                        border-color: #fbe4c9;
+                        transform: translateY(-2px);
                     }
                 }
             }
