--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,3 +3,4 @@ $mobileWidth: '768px';
 
 $themeColor: #da933f;
 $lightThemeColor: lighten($themeColor, 28%);
+$semiLightThemeColor: lighten($themeColor, 18%);
